Poap minting in BC and in DB
